--- a/src/python/Importacion_suelos_Boyaca.ipynb
+++ b/src/python/Importacion_suelos_Boyaca.ipynb
@@ -11,7 +11,7 @@
     "from datetime import datetime \n",
     "\n",
     "fecha = datetime.today().strftime('%Y%m%d')\n",
-    "num_format = re.compile(\"^[\\-]?[0-9]*\\.?[0-9]+$\")"
+    "num_format = re.compile(\"^[\\-]?[0-9]*\\.?[0-9]+$\")\n"
    ]
   },
   {
@@ -355,9 +355,15 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"D:\\AEPS 2.0 Boyaca\\datos\\Suelos\\data\\Suelos_600muestras_N_CO_v2.csv\", encoding='ISO-8859-1', thousands=',', usecols=lambda c: not c.startswith('Unnamed:'))\n",
-    "\n"
+    "df = pd.read_csv(\"D:\\AEPS 2.0 Boyaca\\datos\\Suelos\\data\\Suelos_600muestras_N_CO_v2.csv\", encoding='ISO-8859-1', thousands=',', usecols=lambda c: not c.startswith('Unnamed:'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -433,10 +439,9 @@
     "#far_production_events\n",
     "# 'technical'\t'ext_id'\t'plot'\t'form'\n",
     "\n",
-    "\n",
     "df['event'] = 'EVENTO-SUE-' + fecha + '-' +df['ID'] #Se genera los id externos para los eventos productivos\n",
     "\n",
-    "e = {'technical' : 1, 'ext_id' : df['event'], 'plot': ext_id_plot, 'form' : 1}\n",
+    "e = {'technical' : 1, 'ext_id' : df['event'], 'plot': ext_id_plot, 'form' : 4}\n",
     "\n",
     "event = pd.DataFrame(e)\n",
     "\n",
@@ -449,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#far_response_text y far_response_numeric\n",
     "\n",
     "ARENAS = pd.DataFrame({'event': df['event'], 'raw_value': df['ARENAS'], 'question': 'ARENAS', 'fixed_value': df['ARENAS'], 'raw_units': '%', 'fixed_units': '%', 'validated': 1})\n",
     "LIMOS = pd.DataFrame({'event': df['event'], 'raw_value': df['LIMOS'], 'question': 'LIMOS', 'fixed_value': df['LIMOS'], 'raw_units': '%', 'fixed_units': '%', 'validated': 1})\n",
